--- a/app/src/main/res/drawable/progress_animation.xml
+++ b/app/src/main/res/drawable/progress_animation.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:gravity="center">
-        <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-                         android:drawable="@drawable/loading"
-                         android:pivotX="50%"
-                         android:pivotY="50%"
-                         android:repeatCount="infinite"
-                         android:duration="1200"/>
+        <animated-rotate
+            android:drawable="@drawable/loading"
+            android:duration="1200"
+            android:pivotX="50%"
+            android:pivotY="50%"
+            android:repeatCount="infinite" />
     </item>
 </layer-list>
