--- a/app/src/main/res/layout/empty_state.xml
+++ b/app/src/main/res/layout/empty_state.xml
@@ -4,24 +4,24 @@
     android:id="@+id/empty_state"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="@dimen/big_margin"
     android:visibility="gone"
-    android:gravity="center_vertical"
-    android:background="@color/colorBackground"
     tools:visibility="visible">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="@dimen/icon_image_size"
             android:layout_height="@dimen/icon_image_size"
             android:layout_marginEnd="@dimen/small_margin"
-            android:src="@drawable/ic_worldwide_news_bw"/>
+            android:src="@drawable/ic_worldwide_news_bw"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/empty_state_title"
@@ -31,7 +31,6 @@
             tools:text="@string/empty_state_title_source" />
 
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/empty_state_subtitle"
