--- a/app/src/main/res/layout/error_state.xml
+++ b/app/src/main/res/layout/error_state.xml
@@ -4,7 +4,6 @@
     android:id="@+id/error_state"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="@dimen/big_margin"
@@ -21,7 +20,8 @@
             android:layout_width="@dimen/icon_image_size"
             android:layout_height="@dimen/icon_image_size"
             android:layout_marginEnd="@dimen/small_margin"
-            android:src="@drawable/ic_worldwide_news_bw"/>
+            android:src="@drawable/ic_worldwide_news_bw"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/error_state_title"
@@ -29,7 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="@string/error_state_title_source" />
-
     </LinearLayout>
 
     <TextView
