--- a/app/src/main/res/layout/error_state.xml
+++ b/app/src/main/res/layout/error_state.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/error_state"
     android:layout_width="match_parent"
@@ -10,26 +11,27 @@
     android:visibility="gone"
     tools:visibility="visible">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/error_state_image"
+        android:layout_width="@dimen/icon_image_size"
+        android:layout_height="@dimen/icon_image_size"
+        android:src="@drawable/ic_worldwide_news_bw"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/error_state_title"
+        style="@style/Title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="@dimen/icon_image_size"
-            android:layout_height="@dimen/icon_image_size"
-            android:layout_marginEnd="@dimen/small_margin"
-            android:src="@drawable/ic_worldwide_news_bw"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/error_state_title"
-            style="@style/Title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/error_state_title_source" />
-    </LinearLayout>
+        android:layout_marginStart="@dimen/small_margin"
+        app:layout_constraintBottom_toBottomOf="@id/error_state_image"
+        app:layout_constraintStart_toEndOf="@id/error_state_image"
+        app:layout_constraintTop_toTopOf="@id/error_state_image"
+        tools:text="@string/error_state_title_source" />
 
     <TextView
         android:id="@+id/error_state_subtitle"
@@ -37,6 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
+        app:layout_constraintStart_toStartOf="@id/error_state_image"
+        app:layout_constraintTop_toBottomOf="@id/error_state_image"
         tools:text="@string/error_state_subtitle_source" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -45,6 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
-        android:text="@string/error_state_retry" />
+        android:text="@string/error_state_retry"
+        app:layout_constraintStart_toStartOf="@id/error_state_image"
+        app:layout_constraintTop_toBottomOf="@id/error_state_subtitle" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
