Add paging on News list

--- a/app/src/main/res/layout/activity_sources.xml
+++ b/app/src/main/res/layout/activity_sources.xml
@@ -73,6 +73,7 @@
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="1"
+        android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/item_source" />
 
